# pi-project-template

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  Taskfile.yml  cookiecutter.json
docs/: prerequisites_installation_instructions.md  project_tools.md
{{cookiecutter.project_repository_name}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  {{cookiecutter.project_repository_name}}.env.template
{{cookiecutter.project_repository_name}}/.project_template/: cookiecutter.json  cookiecutter_replay.json  project_template_metadata.json  update_project_template.py
{{cookiecutter.project_repository_name}}/Taskfiles/: docker_pypy_tasks.yml  docker_tasks.yml  docker_venv_tasks.yml
{{cookiecutter.project_repository_name}}/docker/: Dockerfile  pypy_Dockerfile  venv_Dockerfile
{{cookiecutter.project_repository_name}}/docs/: configuring_artifact_repositories.md  prerequisites_installation_instructions.md  project_installation_instructions.md  project_tools.md
{{cookiecutter.project_repository_name}}/notebooks/: notebook_template.ipynb
{{cookiecutter.project_repository_name}}/tests/: test_{{cookiecutter.python_package_name}}.py
{{cookiecutter.project_repository_name}}/{{cookiecutter.python_package_name}}/: __init__.py
{{cookiecutter.project_repository_name}}/{{cookiecutter.python_package_name}}/config/: paths.py  {{cookiecutter.python_package_name}}_config.py
{{cookiecutter.project_repository_name}}/{{cookiecutter.python_package_name}}/scripts/: hello_world.py
(+4 files in other folders)
